--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Calculadora Simples</h1>
 
     <main>
-      <input type="number" name="nn" id="inn" />
+      <input type="number" name="nn" id="inn" :) />
 
       <button style="color:red">C</button>
       <button>()</button>
